LPS-189886 Remove vertical-alignment so the tags selector is displayed correctly aligned

--- a/modules/apps/asset/asset-publisher-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/asset/asset-publisher-web/src/main/resources/META-INF/resources/css/main.scss
@@ -75,7 +75,6 @@
 		.form-group {
 			display: inline-block;
 			margin: 0 8px 8px 0;
-			vertical-align: middle;
 		}
 
 		.container-trash {
